Archive2/7e/279c43dff80103/output
main.cpp:7:14: error: reinterpret_cast from 'unsigned char' to 'char' is not allowed
    char k = reinterpret_cast<char>(j);
             ^~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
