Archive2/7e/279c43dff80103/main.cpp
#include <iostream>

int main()
{
    
    unsigned char j = 4;
    char k = reinterpret_cast<char>(j);

    
}
